RHCLOUD-29101 Introduce recipients.emails field